# number-guessing-game

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md
c/: README.md  main.c
c#/simple/: README.md  input.txt
c#/simple/src/: Program.cs
c#/simple/src/Business/: GameState.cs
c#/simple/src/Core/: GameState.cs
c#/simple/src/Models/: ValidationResult.cs
c#/simple/src/Service/: GameManeger.cs  IUserInterfaceFactory.cs
c#/simple/src/UI/: ui.cs
c#/unity/Roll-a-Ball/: README.md
c#/unity/Roll-a-Ball/Assets/: stage01.unity
c#/unity/Roll-a-Ball/Assets/Scenes/Macros/: DangerWall.asset  DangerWallMaterial.mat  FollowPlayer.asset  GameController.asset  Item.asset  PlayerController.asset
c#/unity/Roll-a-Ball/Assets/Scenes/Materials/: GroundMaterial.mat  WallMaterial.mat
c#/unity/Roll-a-Ball/Assets/Scenes/Prefabs/: DangerWall.prefab  Item.prefab
c#/unity/Roll-a-Ball/Assets/stage01/: LightingData.asset  Lightmap-0_comp_light.exr
c#/unity/Roll-a-Ball/ProjectSettings/: ProjectSettings.asset
c#/unity/number-guessing-game/: README.md
c#/unity/number-guessing-game/Assets/Materials/: DynamicObstacle.mat  Pickup.mat  Player.mat
c#/unity/number-guessing-game/Assets/Prefabs/: Pickup.prefab
c#/unity/number-guessing-game/Assets/Scenes/: MiniGame.unity
c#/unity/number-guessing-game/Assets/Scenes/MiniGame/: NavMesh-Ground.asset
c#/unity/number-guessing-game/Assets/Scripts/: CameraController.cs  PlayerController.cs  Rotator.cs
c#/unity/number-guessing-game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
cpp/: CMakeLists.txt  Makefile  README.md  main
cpp/multi/: README.md
cpp/multi/src/ngg/: CMakeLists.txt
cpp/multi/src/ngg/src/: main.cpp
cpp/multi/src/ngg/src/core/: GameSetting.hpp
cpp/multi/src/ngg/src/io/: IoFactory.cpp  IoFactory.hpp
cpp/multi/src/ngg/src/io/cliio/: CliIo.cpp  CliIo.hpp
cpp/multi/src/ngg/src/io/rosio/: RosIo.cpp  RosIo.hpp
cpp/multi/src/ngg/src/logic/: GameManager.cpp  GameManager.hpp  IIoHandler.hpp  InputData.hpp
cpp/ros2/: .gitignore  Dockerfile  Makefile  README.md  ros2_tmux.sh
cpp/ros2/src/ngg/: CMakeLists.txt  package.xml  test_game_logic.cpp
cpp/ros2/src/ngg/src/: publisher_member_function.cpp  publisher_member_function.hpp  subscriber_member_function.cpp
cpp/ros2/src/ngg/src/publisher/: main.cpp  publisher_member_function.cpp  publisher_member_function.hpp
cpp/ros2/src/ngg/src/subscriber/: main.cpp  subscriber_member_function.cpp  subscriber_member_function.hpp
cpp/ros2/src/ngg/test/: test_game_logic.cpp
cpp/simple/: CMakeLists.txt  DoClangTidy.cmake  FormatFilesWithClangFormat.cmake  Makefile  README.md
cpp/simple/src/: helper.cpp  main.cpp  main.hpp
cpp/simple/src/core/: GameSetting.hpp  GameState.cpp  GameState.hpp
cpp/simple/src/io/: IIoHandler.hpp
cpp/simple/src/io/cliio/: CliIo.cpp  CliIo.hpp
cpp/simple/src/logic/: GameManager.cpp  GameManager.hpp  IIoHandler.hpp  InputData.hpp
cpp/simple2/log/: latest_build
cpp/simple2/src/cpp_pubsub/: CMakeLists.txt  package.xml
cpp/simple2/src/cpp_pubsub/src/: main.cpp  publish_member_function.cpp  publish_member_function.hpp
cpp/src/: main.cpp  main.hpp
csharp/simple/: README.md  class.md
csharp/simple/src/: Program.cs
csharp/simple/src/Core/: GameSetting.cs
csharp/simple/src/Service/: IUserInterface.cs
csharp/simple/src/UI/: ui.cs
csharp/unity/number-guessing-game/: README.md
csharp/unity/number-guessing-game/Assets/Input/: InputActions.inputactions
csharp/unity/number-guessing-game/Assets/Materials/: Background.mat  DynamicObstacle.mat  Enemy.mat  Pickup.mat  Player.mat  Walls.mat
csharp/unity/number-guessing-game/Assets/Prefabs/: DynamicBox.prefab
csharp/unity/number-guessing-game/Assets/Scenes/: MiniGame.unity
csharp/unity/number-guessing-game/Assets/Scripts/: EnemyMovement.cs  PickUpNumber.cs  PlayerController.cs
csharp/unity/number-guessing-game/Assets/Settings/: URP-Balanced.asset  URP-HighFidelity.asset  URP-Performant.asset
csharp/unity/number-guessing-game/Build_Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets
csharp/unity/number-guessing-game/ProjectSettings/: NavMeshAreas.asset  ProjectSettings.asset  ShaderGraphSettings.asset  TagManager.asset
javascript/: .script.js.swo  index.html  script.js
javascript/simple/: README.md  index.html  script.js
kotlin/: README.md
python/: .main.py.swp  main.py
python/asyncio/: README.md  log_config.json  main.py  pyproject.toml
python/pure/: README.md
python/react-fastapi/: pyproject.toml
python/ros2/: README.md
python/ros2/src/ngg/: package.xml  setup.cfg  setup.py
python/ros2/src/ngg/ngg/: publisher_member_function.py  subscriber_member_function.py
python/ros2_uv/: README.md
python/ros2_uv/ngg/: CMakeLists.txt  package.xml
python/ros2_uv/ngg/src/ngg/: CMakeLists.txt  package.xml  pyproject.toml
python/ros2_uv/ngg/src/ngg/src/ngg/: __init__.py  publisher.py
python/simple/: README.md  main.py  pyproject.toml
python/threading/: main.py
rust/: README.md
sh/: check_number.sh
typescript/nuxt/: README.md
typescript/react/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
typescript/react/src/: App.tsx  index.css
typescript/simple/: README.md  index.html  package-lock.json  package.json  vite.config.ts
typescript/simple/src/: script.js  script.ts  style.css
typescript/vue/: package-lock.json  tailwind.config.js.bk
typescript/vue-composition-api/: README.md  package.json
typescript/vue-composition-api/src/logic/: GameLogic.ts
typescript/vue-composition-api/src/types/: index.ts
typescript/vue-options-api/: README.md  package-lock.json  package.json  vite.config.ts
typescript/vue-options-api/src/: App.vue
typescript/vue-options-api/src/enums/: ComparisonResult.ts
typescript/vue-options-api/src/logic/: GameLogic.ts  GameStorage.ts
typescript/vue-options-api/src/types/: index.ts
typescript/vue/src/: App.vue
vue-fastapi-mysql-minio/: README.md  hello.py
(+19 files in other folders)
