[project]
name = "ngg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "norikenpi", email = "norikenpi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
